# rules_goappcssparser

./: MODULE.bazel  WORKSPACE  go.mod
example/: BUILD.bazel  input.go
parser/: BUILD.bazel  main.go  parse.go  parse_test.go  rule.bzl
